--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <p>Будущее уже наступило!</p>
             <p>Осуществи мечту детства!</p>
           </div>
-          <button class="header__btn modal-open">
+          <a class="header__btn modal-open" href="#how">
             Хочу быть космонавтом!
-          </button>
+          </a>
         </div>
 
         <div class="header__description">
@@ -225,7 +225,7 @@
       </div>
     </section>
 
-    <section class="how-to">
+    <section class="how-to" id="how">
       <div class="container">
         <h2 class="title">Как все<br>происходит</h2>
         <div class="how-to__box">
